--- a/scraping/templates/base.html
+++ b/scraping/templates/base.html
@@ -6,6 +6,7 @@
         </title>
     </head>
     <body>
-        {{ amazon }}
+        {{ page }}
+        {{ product_file }}
     </body>
 </html>
